# fheml

./: LICENSE  README.md
inference/: README.md
inference/xnet-main/: .gitignore  CMakeLists.txt  README.md  train.py  train_torch.py  xnet_cahel.cu  xnet_plain.cpp  xnet_seal.cpp
inference/xnet-main/include/: seal_helper.h
inference/xnet-main/include/cifar10/: cifar10_reader.hpp
inference/xnet-main/include/mnist/: mnist_reader_common.hpp
inference/xnet-main/weights/cifar10/: tf-weights_cifar10.h5  weights_conv_b.txt  weights_conv_w.txt  weights_dense1_b.txt  weights_dense1_w.txt  weights_dense_b.txt  weights_dense_w.txt
inference/xnet-main/weights/fmnist/: tf-weights_fmnist.h5  weights_conv_b.txt  weights_conv_w.txt  weights_dense1_b.txt  weights_dense1_w.txt  weights_dense_b.txt  weights_dense_w.txt
inference/xnet-main/weights/mnist/: tf-weights_mnist.h5  weights_conv_b.txt  weights_conv_w.txt  weights_dense1_b.txt  weights_dense1_w.txt  weights_dense_b.txt  weights_dense_w.txt
verification/: README.md
